--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "cellular_automaton_spec"
+name = "ggez_planet"
 version = "0.1.0"
 authors = ["ocboogie <boogie@mikulec.com>"]
 edition = "2018"
 
 [dependencies]
-ggez = { git = "https://github.com/ggez/ggez.git" }
+ggez = "0.5.0-rc.1"
 specs = "0.14.3"
-smart-default = "0.4.0"
+smart-default = "0.5.1"
+
+[dev-dependencies]
+line_drawing = "0.7.0"
